Cosmos and ValidBundles (#33)
* poc: switch to cosmos DB
this is a wip

* commented test, just to deploy

* change pool version

* fix

* Bump version [skip ci]

* fix pipeline

* fix pipeline

* fix pipeline

* fix pipeline

* fix pipeline

* fix pipeline

* Bump version [skip ci]

* fix pipeline

* fix

* Bump version [skip ci]

* fix test

* skip test

* Bump version [skip ci]

* fix

* Bump version [skip ci]

* fix

* Bump version [skip ci]

* fix perf test

* Bump version [skip ci]

* fix

* fix

* fix tests

* fix tests

* fix name

* fix

* fix

* fix

* fix

* [PGEC-95] using valibundles

* fix tests

* fix test

* fix test

* sonar cloud

* coverage

* cache_enabled property added

* Bump version [skip ci]

* improved

* check

* new github action

* try

* try

* fix

* fix

Co-authored-by: pagopa-github-bot <>